Base de datos conectada y lista para el servicio.

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,28 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.16.0",
+    "typeorm": "^0.3.24"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
