--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,15 @@ jobs:
       - name: SSH and deploy
         run: |
           ssh -p 1233 njimenez@146.83.198.35 << 'EOF'
+            export PATH="/home/njimenez/.fnm:$PATH" # O la ruta donde esté tu binario fnm
+            eval "`fnm env`" # Esto cargará la versión de Node.js gestionada por fnm y sus binarios (npm)
+
+            # Verifica que npm y pm2 estén en el PATH dentro de esta sesión SSH
+            echo "PATH dentro de SSH: $PATH"
+            which npm
+            which pm2
+
+            # Comandos de despliegue
             cd LibroConecta/
             git pull
             pm2 stop all
@@ -43,5 +52,5 @@ jobs:
             npm run build
             pm2 start all
             pm2 save
-            
+
           EOF
