Add fnm environment initialization in SSH deployment script

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,8 @@ jobs:
         run: |
           ssh -p 1233 njimenez@146.83.198.35 << 'EOF'
             export PATH="/home/njimenez/.local/share/fnm/:$PATH" 
+            eval "`fnm env`" 
+
 
             # Comandos de despliegue
             cd LibroConecta/
