--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.16.0",
-    "typeorm": "^0.3.24"
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
