--- a/.gitignore
+++ b/.gitignore
@@ -16,12 +16,15 @@ pids
 *.seed
 *.pid.lock
 
-# ───── Dependency directories ─────
+# ───── Package locks (cross-platform issues) ─────
+frontend/package-lock.json
+backend/package-lock.json
+
+
+# ───── Node modules ─────
 node_modules/
 frontend/node_modules/
 backend/node_modules/
-jspm_packages/
-bower_components/
 
 # ───── Build outputs ─────
 build/
