--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^2.0.0-rc.1",
     "pg": "^8.16.0",
     "sequelize": "^6.37.7"
   },
