--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "postinstall": "node -e \"const fs = require('fs'); const path = require('path'); const dir = path.join(process.cwd(), 'uploads', 'books'); fs.mkdirSync(dir, { recursive: true }); console.log('📁 Directorio uploads creado');\""
   },
   "keywords": [],
   "author": "",
