--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && npm run post-build",
+    "build": "vite build",
     "post-build": "node post-build.js",
     "lint": "eslint .",
     "preview": "vite preview",
