--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
+    "mercadopago": "^2.8.0",
     "morgan": "^1.10.0",
     "pg": "^8.16.0",
     "sequelize": "^6.37.7"
