--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@mercadopago/sdk-js": "^0.0.3",
+    "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query-devtools": "^5.83.0",
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.5",
