--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mercadopago": "^2.8.0",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "pg": "^8.16.0",
     "sequelize": "^6.37.7"
   },
