--- a/backend/package.json
+++ b/backend/package.json
@@ -25,8 +25,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "pg": "^8.16.0",
-    "sequelize": "^6.37.7",
-    "socket.io": "^4.8.1"
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
